main/default/objects/Supplier_Facility__c/Supplier_Facility__c.object-meta.xml
<CustomObject>
    <description>Supplier Facility Relationship</description>
    <label>Supplier Facility</label>
    <nameField>
        <displayFormat>SF-{0000000}</displayFormat>
        <label>Supplier Facility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers Facilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>