main/default/objects/Supplier_Facility__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <description>Contract Signed Date</description>
    <formula>Supplier__r.Contract_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract Signed Date</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>