main/default/objects/Supplier_Facility__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Organization</description>
    <formula>TEXT(Supplier__r.Organization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Organization</inlineHelpText>
    <label>Organization</label>
    <type>Text</type>
</CustomField>