main/default/objects/Supplier_Facility__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <formula>Facility__r.Main_Product_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Group</label>
    <type>Text</type>
</CustomField>