main/default/objects/Supplier_Facility__c/fields/Relation_Status__c.field-meta.xml
<CustomField>
    <fullName>Relation_Status__c</fullName>
    <description>Relation Status</description>
    <inlineHelpText>Relation Status</inlineHelpText>
    <label>Relation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>