main/default/objects/Supplier_Facility__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Supplier</description>
    <inlineHelpText>Supplier</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Suppliers Facilities</relationshipLabel>
    <relationshipName>Suppliers_Facilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>