main/default/objects/Supplier_Facility__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>Supplier Name</description>
    <formula>Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supplier Name</inlineHelpText>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>