main/default/objects/Supplier_Facility__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <description>Supplier Number</description>
    <formula>Supplier__r.Supplier_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supplier Number</inlineHelpText>
    <label>Supplier Number</label>
    <type>Text</type>
</CustomField>