main/default/objects/Supplier_Facility__c/fields/Supplier_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Status__c</fullName>
    <description>Supplier Status</description>
    <formula>TEXT(Supplier__r.Supplier_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supplier Status</inlineHelpText>
    <label>Supplier Status</label>
    <type>Text</type>
</CustomField>