main/default/objects/Supplier_Facility__c/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <description>Supplier Type</description>
    <formula>TEXT(Supplier__r.Supplier_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supplier Type</inlineHelpText>
    <label>Supplier Type</label>
    <type>Text</type>
</CustomField>